# app_deploy_test

./: .gitignore  README.md  README2.md  code.txt  final222.ipynb  requirements.txt  setup_README.md  working_simulator.ipynb
.devcontainer/: devcontainer.json
steel_microstructure/: app.py  pyproject.toml  requirements.txt
steel_microstructure/simulator/: __init__.py  animation.py  base.py  cast_iron.py  constants.py  dashboard.py  factory.py  iron.py  plots.py  report.py  steel.py  transitions.py
steel_microstructure/simulator.egg-info/: SOURCES.txt
steel_microstructure/simulator/simulator.egg-info/: PKG-INFO  SOURCES.txt
