[build-system]
requires = ["setuptools>61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simulator"
version = "0.1.0"
description = "Iron-Carbon phase diagram microstructure simulator"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["simulator*"]